--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,20 @@
-version: "3.3"
-
 services:
   database:
     container_name: quiz_devpro_database
-    image: postgres:11.5
-    restart: always
+    image: postgres:15
+    restart: unless-stopped
     volumes:
       - ./.pgdata:/var/lib/postgresql/data
     environment:
       - LC_ALL=C.UTF-8
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_USER=postgres
+      - POSTGRES_USER=devpro
+      - POSTGRES_DB=quizdevpro
     ports:
       - 5432:5432
+  redis:
+    image: redis:7.2
+    volumes:
+      - ./.redisdata:/data
+    ports:
+      - 6379:6379
