--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
-newrelic
-asgiref==3.3.1
+asgiref==3.7.2
+async-timeout==4.0.3
 boto3==1.16.46
 botocore==1.19.46
 Collectfast==2.2.0
 dj-database-url==0.5.0
-Django==3.1.4
+Django==3.2.21
 django-s3-folder-storage==0.5
 django-storages==1.11.1
 gunicorn==20.0.4
 jmespath==0.10.0
+newrelic==9.0.0
+psycopg2-binary==2.9.7
 python-dateutil==2.8.1
 python-decouple==3.3
 pytz==2020.5
+redis==5.0.0
 s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.4.1
 typing-extensions==3.7.4.3
 urllib3==1.26.2
-psycopg2-binary==2.8.6
-
